fixed overflow due to mail link overflowing

--- a/styles.css
+++ b/styles.css
@@ -336,7 +336,7 @@ hr
 	}
 }
 
-@media (max-width:430px)
+@media (max-width:450px)
 {
 	/*Home Section*/
 	.introDescription
@@ -349,6 +349,9 @@ hr
 	{
 		margin-top:2rem;
 		margin-left:40%;
+	}
+	.mailLink{
+		font-size:1.5rem;
 	}
 }
 
